# SimpleMessenger

./: CMakeLists.txt  SimplePocoHandler.cpp  SimplePocoHandler.h  amqp-cpp.cpp  amqp-cpp.h  client.cpp  server.cpp
